cargo-features = ["named-profiles"]

[package]
name = "herlang"
version = "0.1.0"
authors = ["迷渡 <justjavac@gmail.com>"]
edition = "2024"

[dependencies]
rustyline = { version = "16.0.0", optional = true }
rustyline-derive = { version = "0.11.1", optional = true }
unicode-xid = { version = "0.2.6" }
unicode-normalization = "0.1.24"

[[bin]]
name = "herlang"
path = "src/bin/main.rs"
required-features = ["binaries"]

[[bin]]
name = "wasm"
path = "src/wasm/main.rs"
required-features = ["wasm"]

[features]
binaries = ["rustyline", "rustyline-derive"]
wasm = []
rustyline = ["dep:rustyline"]
rustyline-derive = ["dep:rustyline-derive"]

[profile.release]
lto = true

[profile.tiny]
inherits = 'release'
opt-level = 'z'

[profile.tiny.build-override]
opt-level = 'z'
